configs/gke/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: preview
  annotations:
    kubernetes.io/ingress.global-static-ip-name: preview-ingress-static-ip
spec:
  tls:
  - secretName: preview-wildcard-tls
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: preview
          servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: preview
  labels:
    app: preview
spec:
  replicas: 1
  selector:
    matchLabels:
      app: preview
  template:
    metadata:
      labels:
        app: preview
    spec:
      containers:
      - name: preview
        image: voldern/kubernetes-preview-ingress:0.0.1
        resources:
          requests:
            cpu: 50m
          limits:
            cpu: 50m
        readinessProbe:
          initialDelaySeconds: 30
          httpGet:
            path: /health
            port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: preview
  labels:
    app: preview
spec:
  type: NodePort
  selector:
    app: preview
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
